--- a/In_progress.bib
+++ b/In_progress.bib
@@ -1,23 +1,11 @@
-@unpublished{zhang_self-control_nodate,
-	title = {The Self-Control Scale and Social Desirability: A Meta-Analysis and Systematic Review},
-	url = {https://psyarxiv.com/j4vy8/},
-	author = {{\bf Zhang}, Han and Xin, Sun and Miyake, Akira},
-	pubstate = {Under review}
+@unpublished{Thanh_PesticideEWAS,
+	title = {Epigenome-wide DNA methylation and pesticide use in the Agricultural Lung Health Study},
+	author = {Hoang, Thanh T. and Qi, Cancan and Paul, Kimberly C. and Lee, Mi Kyeong, and {\bf White, Julie D.} and Richards, Marie and Auerbach, Scott S. and Long, Stuart and Shrestha, Srishti and Wang, Tianyuan and Beane-Freeman, Laura E. and Parks, Christine and BIOS Consortium and Xu, Cheng-jian and Ritz, Beate and Koppelman, Gerard H. and London, Stephanie J.},
+	pubstate = {In review}
 }
 
-
-@unpublished{zhang_meaning_2020,
-	title = {Mind-wandering during Scene Perception: On the Role of Meaning and Salience},
-	author = {{\bf Zhang}, Han and Anderson, Nicola C. and Miller, Kevin F.},
-	url = {https://psyarxiv.com/9fc2u/},
-	doi = {10.31234/osf.io/9fc2u},
-	pubstate = {Under review}
-}
-
-
-
-@unpublished{zhang_individual_2021,
-	title = {Individual Differences in Susceptibility to Distractions},
-	author = {{\bf Zhang}, Han and Miyake, Akira and Jonides, John},
-	pubstate = {In prep}
+@unpublished{Hoskens_BiometricMatching,
+	title = {3D facial phenotyping by biometric sibling matching used in contemporary genomic methodologies},
+	author = {Hoskens, Hanne  and Liu, Dongjing and Naqvi, Sahin and Lee, Myoung Keun and Indencleef, Karlijne and {\bf White, Julie D.} and Li, Jiarui and Hens, Greet and Wysocka, Joanna and Walsh, Susan and Richmond, Stephen and Shriver, Mark D. and Shaffer, John R. and Peeters, Hilde and Weinberg, Seth M. and Claes, Peter},
+	pubstate = {In review}
 }
