--- a/CV.tex
+++ b/CV.tex
@@ -55,22 +55,22 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 
-\name{Han}{Zhang}
+\name{Julie D.}{White}
 
-\position{Postdoctoral Research Fellow}
-\address{Department of Psychology, University of Michigan}
+\position{IRTA Postdoctoral Research Fellow}
+\address{National Institute of Environmental Health Sciences}
 
-\email{\href{mailto:hanzh@umich.edu}{\nolinkurl{hanzh@umich.edu}}}
-\homepage{sites.lsa.umich.edu/hanzh}
-\researchgate{Han\_Zhang175}
-\github{HanZhang-psych}
-\twitter{\_HanZhang\_}
+\email{\href{mailto:julie.white@nih.gov}{\nolinkurl{julie.white@nih.gov}}}
+\orcid{0000-0002-2235-4817}
+\github{juliedwhite}
+\linkedin{julie-white-05888b133}
 
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \skype{skype-id}
 % \reddit{reddit-id}
 
+\quote{Trying to make things work}
 
 \usepackage{booktabs}
 
@@ -113,8 +113,8 @@
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {April 2021}
-    {Han Zhang~~~·~~~Curriculum Vitae}
+  {May 2021}
+    {Julie D. White~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
@@ -128,257 +128,255 @@
 \hypertarget{research-interests}{%
 \section{Research Interests}\label{research-interests}}
 
-Attention; distraction; mind-wandering; eye movements
+\begin{itemize}
+\tightlist
+\item
+  Genetic and environmental contributors to human phenotypic variation
+  and health
+\item
+  Epigenetic modifications in response to environmental exposures
+\item
+  Gene x environment interactions
+\item
+  Bioinformatics, statistical genetics, and data visualization
+\end{itemize}
 
 \hypertarget{education}{%
 \section{Education}\label{education}}
 
 \begin{cventries}
-    \cventry{Postdoctoral Research Fellow, Department of Psychology}{University of Michigan}{Ann Arbor, MI, USA}{05/2020-present}{\begin{cvitems}
-\item Advisor: Dr. John Jonides
-\end{cvitems}}
-    \cventry{Doctor of Philosophy, Combined Program in Education and Psychology}{University of Michigan}{Ann Arbor, MI, USA}{09/2018-05/2020}{\begin{cvitems}
-\item Dissertation: Mind-wandering: What Can We Learn from Eye Movements?
-\item Proquest Distinguished Dissertation Nomination
-\end{cvitems}}
-    \cventry{Master of Science, Combined Program in Education and Psychology}{University of Michigan}{Ann Arbor, MI, USA}{09/2014-05/2018}{}\vspace{-4.0mm}
-    \cventry{Bachelor of Science, Psychology}{Beijing Normal University}{Beijing, China}{09/2010-06/2014}{}\vspace{-4.0mm}
+    \cventry{Clemson University}{B.S. in Genetics}{2010-2014}{}{}\vspace{-4.0mm}
+    \cventry{Penn State University}{M.A. in Anthropology}{2014-2016}{}{}\vspace{-4.0mm}
+    \cventry{Penn State University}{Ph.D. in Anthropology}{2016-2019}{}{}\vspace{-4.0mm}
 \end{cventries}
 
-\hypertarget{awards-and-grants}{%
-\section{Awards and Grants}\label{awards-and-grants}}
+\hypertarget{history}{%
+\section{History}\label{history}}
 
 \begin{cventries}
-    \cventry{University of Michigan}{Rackham One-Term Dissertation Fellowship (\$17417)}{2019}{}{}\vspace{-4.0mm}
-    \cventry{University of Michigan}{Rackham Graduate Student Research Grant (\$3000)}{2019}{}{}\vspace{-4.0mm}
-    \cventry{University of Michigan}{Rackham Conference Travel Grant (\$1050)}{2019}{}{}\vspace{-4.0mm}
-    \cventry{University of Michigan}{Rackham Summer Training Award (\$3700)}{2018}{}{}\vspace{-4.0mm}
-    \cventry{University of Michigan}{Rackham Conference Travel Grant (\$800)}{2018}{}{}\vspace{-4.0mm}
-    \cventry{University of Michigan}{Rackham Conference Travel Grant (\$800)}{2017}{}{}\vspace{-4.0mm}
-    \cventry{University of Michigan}{Professor \& Mrs. Cho-Yee To Travel Grant (\$500)}{2017}{}{}\vspace{-4.0mm}
-    \cventry{University of Michigan}{Professor \& Mrs. Cho-Yee To Travel Grant (\$500)}{2015}{}{}\vspace{-4.0mm}
-    \cventry{Ministry of Education of the People's Republic of China}{China National Scholarship (\$1500)}{2014}{}{}\vspace{-4.0mm}
-    \cventry{Beijing Normal University}{The First Rank Academic Scholarship (\$300)}{2014}{}{}\vspace{-4.0mm}
-    \cventry{Beijing Normal University}{The First Rank Academic Scholarship (\$300)}{2013}{}{}\vspace{-4.0mm}
-    \cventry{Beijing Municipal Commission of Education}{Beijing Student Research and Entrepreneurial Action Plan (\$1500)}{2013}{}{}\vspace{-4.0mm}
-    \cventry{Beijing Normal University}{Undergraduate Student Research Grant (\$280)}{2012}{}{}\vspace{-4.0mm}
+    \cventry{Epidemiology Branch; National Institute of Environmental Health Sciences}{IRTA Postdoctoral Fellow}{2020-current}{}{}\vspace{-4.0mm}
+    \cventry{Penn State University}{Instructor}{2019}{}{}\vspace{-4.0mm}
+    \cventry{Penn State University}{Graduate Research Assistant}{2014-2019}{}{}\vspace{-4.0mm}
+    \cventry{Penn State University}{Teaching Assistant}{2014-2018}{}{}\vspace{-4.0mm}
+    \cventry{Texas A\&M University}{NSF REU Biochemistry Intern}{2013}{}{}\vspace{-4.0mm}
+    \cventry{Greenwood Genetics Center}{Summer Research Intern}{2012}{}{}\vspace{-4.0mm}
+    \cventry{Clemson University}{Undergraduate Researcher in Genetics and Biochemistry}{2010-2014}{}{}\vspace{-4.0mm}
 \end{cventries}
 
-\hypertarget{peer-reviewd-publications}{%
-\section{Peer-reviewd Publications}\label{peer-reviewd-publications}}
+\hypertarget{computational-languages}{%
+\section{Computational Languages}\label{computational-languages}}
 
-\begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
+\hypertarget{publications}{%
+\section{Publications}\label{publications}}
 
-\hypertarget{refs_published}{}
-\leavevmode\hypertarget{ref-zhang_malleability_2021}{}%
-\textbf{Zhang}, H., Abagis, T. R., \& Jonides, J. (in press-). The
-malleability of attentional capture. \emph{Visual Cognition}.
-\url{https://doi.org/https://doi.org/10.1080/13506285.2021.1915903}
-
-\leavevmode\hypertarget{ref-zhang_pre-trial_2021}{}%
-\textbf{Zhang}, H., \& Jonides, J. (2021). Pre-trial gaze stability
-predicts momentary slips of attention. \emph{EMICS '21}. ACM CHI '21
-workshop on eye movements as an interface to cognitive state.
-
-\leavevmode\hypertarget{ref-zhang_scan-paths_2020}{}%
-\textbf{Zhang}, H., Anderson, N. C., \& Miller, K. F. (2020). Refixation
-patterns of mind-wandering during real-world scene perception.
-\emph{Journal of Experimental Psychology: Human Perception and
-Performance}, \emph{47}(1), 36--52.
-\url{https://doi.org/10.1037/xhp0000877}
-
-\leavevmode\hypertarget{ref-zhang_wandering_2020}{}%
-\textbf{Zhang}, H., Miller, K. F., Sun, X., \& Cortina, K. S. (2020).
-Wandering eyes: Eye movements during mind wandering in video lectures.
-\emph{Applied Cognitive Psychology}, \emph{34}(2), 449--464.
-\url{https://doi.org/10.1002/acp.3632}
-
-\leavevmode\hypertarget{ref-zhang_missing_2019}{}%
-\textbf{Zhang}, H., Qu, C., Miller, K. F., \& Cortina, K. S. (2020).
-Missing the joke: Reduced rereading of garden-path jokes during
-mind-wandering. \emph{Journal of Experimental Psychology: Learning,
-Memory, and Cognition}, \emph{46}(4), 638--648.
-\url{https://doi.org/10.1037/xlm0000745}
-
-\leavevmode\hypertarget{ref-zhang_how_2018}{}%
-\textbf{Zhang}, H., Miller, K. F., Cleveland, R., \& Cortina, K. S.
-(2018). How listening to music affects reading: Evidence from eye
-tracking. \emph{Journal of Experimental Psychology: Learning, Memory,
-and Cognition}, \emph{44}(11), 1778--1791.
-\url{https://doi.org/10.1037/xlm0000544}
-
-\endgroup
-
-\hypertarget{work-in-progress}{%
-\section{Work in Progress}\label{work-in-progress}}
+\hypertarget{in-progress}{%
+\subsection{In-progress}\label{in-progress}}
 
 \begingroup
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.5in}
 
 \hypertarget{refs_inprogress}{}
-\leavevmode\hypertarget{ref-zhang_individual_2021}{}%
-\textbf{Zhang}, H., Miyake, A., \& Jonides, J. (in prep-).
-\emph{Individual differences in susceptibility to distractions}.
+\leavevmode\hypertarget{ref-Thanh_PesticideEWAS}{}%
+Hoang, T. T., Qi, C., Paul, K. C., Lee, Mi Kyeong, \textbf{White, Julie
+D.}, Richards, M., Auerbach, S. S., Long, S., Shrestha, S., Wang, T.,
+Beane-Freeman, L. E., Parks, C., Consortium, B., Xu, C.-j., Ritz, B.,
+Koppelman, G. H., \& London, S. J. (in review-). \emph{Epigenome-wide
+dna methylation and pesticide use in the agricultural lung health
+study}.
 
-\leavevmode\hypertarget{ref-zhang_meaning_2020}{}%
-\textbf{Zhang}, H., Anderson, N. C., \& Miller, K. F. (under review-).
-\emph{Mind-wandering during scene perception: On the role of meaning and
-salience}. \url{https://doi.org/10.31234/osf.io/9fc2u}
-
-\leavevmode\hypertarget{ref-zhang_self-control_nodate}{}%
-\textbf{Zhang}, H., Xin, S., \& Miyake, A. (under review-). \emph{The
-self-control scale and social desirability: A meta-analysis and
-systematic review}. \url{https://psyarxiv.com/j4vy8/}
+\leavevmode\hypertarget{ref-Hoskens_BiometricMatching}{}%
+Hoskens, H., Liu, D., Naqvi, S., Lee, M. K., Indencleef, K.,
+\textbf{White, Julie D.}, Li, J., Hens, G., Wysocka, J., Walsh, S.,
+Richmond, S., Shriver, M. D., Shaffer, J. R., Peeters, H., Weinberg, S.
+M., \& Claes, P. (in review-). \emph{3D facial phenotyping by biometric
+sibling matching used in contemporary genomic methodologies}.
 
 \endgroup
 
-\hypertarget{book-chapters}{%
-\section{Book Chapters}\label{book-chapters}}
+\hypertarget{peer-reviewed}{%
+\subsection{Peer-reviewed}\label{peer-reviewed}}
 
 \begingroup
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.5in}
 
-\hypertarget{refs_books}{}
-\leavevmode\hypertarget{ref-michal_cognitive_2021}{}%
-Michal, A., Fansher, M., Xin, S., \textbf{Zhang}, H., \& Shah, P.
-(2021). Cognitive development: Methods and illustrative examples. In
-\emph{The oxford handbook of educational psychology}. Oxford University
-Press.
+\hypertarget{refs_published}{}
+\leavevmode\hypertarget{ref-Indencleef_2021_NSCLP}{}%
+Indencleef, K., Hoskens, H., Lee, M. K., \textbf{White, Julie D.}, Liu,
+C., Eller, R. J., Naqvi, S., Wehby, G. L., Moreno Uribe, L. M., Hecht,
+J. T., Long, R. E., Christensen, K., Deleyiannis, F. W., Walsh, S.,
+Shriver, M. D., Richmond, S., Wysocka, J., Peeters, H., Shaffer, J. R.,
+\ldots{} Claes, P. (2021). The intersection of the genetic architectures
+of orofacial clefts and normal facial variation {[}Journal Article{]}.
+\emph{Frontiers in Genetics}, \emph{12}(170).
+\url{https://doi.org/10.3389/fgene.2021.626403}
+
+\leavevmode\hypertarget{ref-White_Indencleef_2021_MetaGWAS}{}%
+\textbf{White, Julie D.}, Indencleef, K., Naqvi, S., Eller, R. J.,
+Hoskens, H., Roosenboom, J., Lee, M. K., Li, J., Mohammed, J., Richmond,
+S., Quillen, E. E., Norton, H. L., Feingold, E., Swigut, T., Marazita,
+M. L., Peeters, H., Hens, G., Shaffer, J. R., Wysocka, J., \ldots{}
+Claes, P. (2021). Insights into the genetic architecture of the human
+face {[}Journal Article{]}. \emph{Nature Genetics}, \emph{53}(1),
+45--53. \url{https://doi.org/10.1038/s41588-020-00741-7}
+
+\leavevmode\hypertarget{ref-Ekrami_2020_MultivariateAsymmetry}{}%
+Ekrami, O., Claes, P., \textbf{White, Julie D.}, Weinberg, S. M.,
+Marazita, M. L., Walsh, S., Shriver, M. D., \& Van Dongen, S. (2020). A
+multivariate approach to determine the dimensionality of human facial
+asymmetry {[}Journal Article{]}. \emph{Symmetry}, \emph{12}(3), 348.
+\url{https://doi.org/10.3390/sym12030348}
+
+\leavevmode\hypertarget{ref-Li_2020_AncestryInference}{}%
+Li, J., Zarzar, T. G., \textbf{White, Julie D.}, Indencleef, K.,
+Hoskens, H., Matthews, H., Nauwelaers, N., Zaidi, A., Eller, R. J.,
+Herrick, N., Günther, T., Svensson, E. M., Jakobsson, M., Walsh, S., Van
+Steen, K., Shriver, M. D., \& Claes, P. (2020). Robust genome-wide
+ancestry inference for heterogeneous datasets: Illustrated using the
+1,000 genome project with 3D facial images {[}Journal Article{]}.
+\emph{Scientific Reports}, \emph{10}(1), 11850.
+\url{https://doi.org/10.1038/s41598-020-68259-w}
+
+\leavevmode\hypertarget{ref-White_2020_CameraVariation}{}%
+\textbf{White, Julie D.}, Ortega-Castrillon, A., Virgo, C., Indencleef,
+K., Hoskens, H., Shriver, M. D., \& Claes, P. (2020). Sources of
+variation in the 3dMDface and vectra h1 3D facial imaging systems
+{[}Journal Article{]}. \emph{Scientific Reports}, \emph{10}(1), 4443.
+\url{https://doi.org/10.1038/s41598-020-61333-3}
+
+\leavevmode\hypertarget{ref-Sero_2019_FaceToDNA}{}%
+Sero, D., Zaidi, A., Li, J., \textbf{White, Julie D.}, Zarzar, T. B. G.,
+Marazita, M. L., Weinberg, S. M., Suetens, P., Vandermeulen, D., Wagner,
+J. K., Shriver, M. D., \& Claes, P. (2019). Facial recognition from dna
+using face-to-dna classifiers {[}Journal Article{]}. \emph{Nature
+Communications}, \emph{10}(1), 2557.
+\url{https://doi.org/10.1038/s41467-019-10617-y}
+
+\leavevmode\hypertarget{ref-White_2019_MeshMonk}{}%
+\textbf{White, Julie D.}, Ortega-Castrillón, A., Matthews, H., Zaidi, A.
+A., Ekrami, O., Snyders, J., Fan, Y., Penington, T., Van Dongen, S.,
+Shriver, M. D., \& Claes, P. (2019). MeshMonk: Open-source large-scale
+intensive 3D phenotyping {[}Journal Article{]}. \emph{Scientific
+Reports}, \emph{9}(1), 6085.
+\url{https://doi.org/10.1038/s41598-019-42533-y}
+
+\leavevmode\hypertarget{ref-Zaidi_White_2019_Masculinity}{}%
+Zaidi, A. A., \textbf{White, Julie D.}, Mattern, B. C., Liebowitz, C.
+R., Puts, D. A., Claes, P., \& Shriver, M. D. (2019). Facial masculinity
+does not appear to be a condition-dependent male ornament and does not
+reflect mhc heterozygosity in humans {[}Journal Article{]}.
+\emph{Proceedings of the National Academy of Sciences}, \emph{116}(5),
+1633--1638. \url{https://doi.org/10.1073/pnas.1808659116}
+
+\leavevmode\hypertarget{ref-Claes_2018_GlobalToLocal}{}%
+Claes, P., Roosenboom, J., \textbf{White, Julie D.}, Swigut, T., Sero,
+D., Li, J., Lee, M. K., Zaidi, A., Mattern, B. C., Liebowitz, C.,
+Pearson, L., González, T., Leslie, E. J., Carlson, J. C., Orlova, E.,
+Suetens, P., Vandermeulen, D., Feingold, E., Marazita, M. L., \ldots{}
+Weinberg, S. M. (2018). Genome-wide mapping of global-to-local genetic
+effects on human facial shape {[}Journal Article{]}. \emph{Nature
+Genetics}, \emph{50}(3), 414--423.
+\url{https://doi.org/10.1038/s41588-018-0057-4}
+
+\leavevmode\hypertarget{ref-Ekrami_2018_MeasuringAsymmetry}{}%
+Ekrami, O., Claes, P., \textbf{White, Julie D.}, Zaidi, A. A., Shriver,
+M. D., \& Van Dongen, S. (2018). Measuring asymmetry from high-density
+3D surface scans: An application to human faces {[}Journal Article{]}.
+\emph{PloS One}, \emph{13}(12), e0207895--e0207895.
+\url{https://doi.org/10.1371/journal.pone.0207895}
+
+\leavevmode\hypertarget{ref-Indencleef_2018_SixNSCLP}{}%
+Indencleef, K., Roosenboom, J., Hoskens, H., \textbf{White, Julie D.},
+Shriver, M. D., Richmond, S., Peeters, H., Feingold, E., Marazita, M.
+L., Shaffer, J. R., Weinberg, S. M., Hens, G., \& Claes, P. (2018). Six
+nscl/p loci show associations with normal-range craniofacial variation
+{[}Journal Article{]}. \emph{Frontiers in Genetics}, \emph{9}(502).
+\url{https://doi.org/10.3389/fgene.2018.00502}
+
+\leavevmode\hypertarget{ref-Rosenboom_2018_Testosterone}{}%
+Roosenboom, J., Indencleef, K., Lee, M. K., Hoskens, H., \textbf{White,
+Julie D.}, Liu, D., Hecht, J. T., Wehby, G. L., Moreno, L. M.,
+Hodges-Simeon, C., Feingold, E., Marazita, M. L., Richmond, S., Shriver,
+M. D., Claes, P., Shaffer, J. R., \& Weinberg, S. M. (2018). SNPs
+associated with testosterone levels influence human facial morphology
+{[}Journal Article{]}. \emph{Frontiers in Genetics}, \emph{9}(497).
+\url{https://doi.org/10.3389/fgene.2018.00497}
+
+\leavevmode\hypertarget{ref-Kelso_2017_BCCIP}{}%
+Kelso, A. A., Goodson, S. D., Watts, L. E., Ledford, L. L., Waldvogel,
+S. M., Diehl, J. N., Shah, S. B., Say, A. F., \textbf{White, Julie D.},
+\& Sehorn, M. G. (2017). The β-isoform of bccip promotes adp release
+from the rad51 presynaptic filament and enhances homologous dna pairing
+{[}Journal Article{]}. \emph{Nucleic Acids Res}, \emph{45}(2), 711--725.
+\url{https://doi.org/10.1093/nar/gkw877}
 
 \endgroup
 
-\hypertarget{selected-presentations}{%
-\section{Selected Presentations}\label{selected-presentations}}
+\hypertarget{non-peer-reviewed}{%
+\subsection{Non peer-reviewed}\label{non-peer-reviewed}}
 
 \begingroup
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.5in}
 
-\hypertarget{refs_presentations}{}
-\leavevmode\hypertarget{ref-zhang_scan-paths_2020}{}%
-\textbf{Zhang}, H., Anderson, N. C., \& Miller, K. F. (2020, April).
-\emph{Scan-paths of mind-wandering during real-world scene perception}.
-\textbf{Graduate student research award}. The 92nd annual meeting of the
-midwestern psychological association (conference canceled due to
-covid-19), Chicago, IL, USA.
-
-\leavevmode\hypertarget{ref-zhang_reduced_2019}{}%
-\textbf{Zhang}, H., Qu, C., Miller, K. F., \& Cortina, K. S. (2019,
-November). \emph{Reduced re-reading of garden-path jokes during mindless
-reading}. Poster presented at the 60th psychonomic society annual
-meeting, Montreal, Canada.
-
-\leavevmode\hypertarget{ref-sun_when_2019}{}%
-Sun, X., Shah, P., \& \textbf{Zhang}, H. (2019, June). \emph{When do
-students suffer from mind wandering? The role of individual difference
-and learning context}. Poster presented at SARMAC XIII, Cape Cod, MA,
-USA.
-
-\leavevmode\hypertarget{ref-zhang_mind-wandering_2019}{}%
-\textbf{Zhang}, H., Miller, K. F., Cortina, K. S., \& Jiang, T. (2019,
-June). \emph{Mind-wandering in college classrooms: A mobile eye-tracking
-study}. Poster presented at SARMAC XIII, Cape Cod, MA, USA.
-
-\leavevmode\hypertarget{ref-fischer_examining_2019}{}%
-Fischer, A., \& \textbf{Zhang}, H. (2019, May). \emph{Examining the
-effect of word predictability during mindless reading}. Poster presented
-at the association for psychological science annual meeting, Washington
-DC, USA.
-
-\leavevmode\hypertarget{ref-hwang_eye_2019}{}%
-Hwang, Y.-G., \textbf{Zhang}, H., \& Miller, K. F. (2019, May).
-\emph{Eye movements of mind-wandering during scene viewing: Insights
-from scan-paths}. Poster presented at the association for psychological
-science annual meeting, Washington DC, USA.
-
-\leavevmode\hypertarget{ref-zhang_what_2019}{}%
-\textbf{Zhang}, H., \& Shah, P. (2019, May). \emph{What can iPhone's
-screen time tell about your cognitive functioning?} Poster presented at
-the association for psychological science annual meeting, Washington DC,
-USA.
-
-\leavevmode\hypertarget{ref-zhang_mind-wandering_2019-1}{}%
-\textbf{Zhang}, H. (2019, April). \emph{Mind-wandering: What can we
-learn from eye-movements?} Talk presented at combined program in
-education and psychology brownbag, University of Michigan.
-
-\leavevmode\hypertarget{ref-zhang_scan-paths_2019}{}%
-\textbf{Zhang}, H., Miller, K. F., \& Sun, X. (2019, March).
-\emph{Scan-paths of mind-wandering during video lectures}. Poster
-presented at the international convention of psychological science,
-Paris, France.
-
-\leavevmode\hypertarget{ref-zhang_how_2018}{}%
-\textbf{Zhang}, H., \& Miller, K. F. (2018, November). \emph{How
-irrelevant speech affects reading: The role of word predictability}.
-Poster presented at the 59th psychonomic society annual meeting, New
-Orleans, LA, USA.
-
-\leavevmode\hypertarget{ref-qu_all_2018}{}%
-Qu, C., \& \textbf{Zhang}, H. (2018, May). \emph{All joking aside:
-Mind-wandering impairs processing of garden-path jokes}. Poster
-presented at the association for psychological science annual meeting,
-San Francisco, CA.
-
-\leavevmode\hypertarget{ref-zhang_wandering_2018}{}%
-\textbf{Zhang}, H., Miller, K. F., \& Sun, X. (2018, May). \emph{The
-wandering eyes: Mind-wandering during video lectures is associated with
-oculomotor behaviors}. Poster presented at the association for
-psychological science annual meeting, San Francisco, CA.
-
-\leavevmode\hypertarget{ref-zhang_how_2016}{}%
-\textbf{Zhang}, H., Miller, K. F., Cleveland, R., \& Cortina, K. S.
-(2016, May). \emph{How listening to music affects reading: Evidence from
-eye tracking}. Poster presented at the association for psychological
-science annual meeting, Chicago, IL, USA.
-
-\leavevmode\hypertarget{ref-zhang_how_2016-1}{}%
-\textbf{Zhang}, H., \& Cleveland, R. (2016, March). \emph{How does
-listening to music affect reading? An eye tracking study}. Talk
-presented at combined program in education and psychology brownbag,
-University of Michigan.
+\hypertarget{refs_nonreviewed}{}
+\leavevmode\hypertarget{ref-White__2019_Attractiveness}{}%
+\textbf{White, Julie D.}, \& Puts, D. A. (2019). Genes influence facial
+attractiveness through intricate biological relationships {[}Journal
+Article{]}. \emph{PLOS Genetics}, \emph{15}(4), e1008030.
+\url{https://doi.org/10.1371/journal.pgen.1008030}
 
 \endgroup
 
-\hypertarget{teaching-experience}{%
-\section{Teaching Experience}\label{teaching-experience}}
+\hypertarget{grants-and-awards}{%
+\section{Grants and Awards}\label{grants-and-awards}}
+
+\begin{cventries}
+    \cventry{National Science Foundation DDRIG (\#31,535; awarded but declined)}{}{2019}{}{}\vspace{-4.0mm}
+    \cventry{PSU Hill Fellowship Award (\$1500 and \$1200)}{}{2017-2018}{}{}\vspace{-4.0mm}
+    \cventry{UW Summer Institutes in Statistical Genetics Travel Award (\$1800)}{}{2017}{}{}\vspace{-4.0mm}
+    \cventry{PSU RGSO Conference Travel Award (\$400 each year)}{}{2016-2018}{}{}\vspace{-4.0mm}
+    \cventry{PSU Center for Human Evolution and Diversity Research Grant (\$7303}{}{2015}{}{}\vspace{-4.0mm}
+\end{cventries}
+
+\hypertarget{invited-presentations}{%
+\section{Invited Presentations}\label{invited-presentations}}
+
+\begingroup
+\setlength{\parindent}{-0.5in}
+\setlength{\leftskip}{0.5in}
+
+\endgroup
+
+\hypertarget{conference-participation}{%
+\section{Conference Participation}\label{conference-participation}}
+
+\begingroup
+\setlength{\parindent}{-0.5in}
+\setlength{\leftskip}{0.5in}
+
+\endgroup
+
+\hypertarget{pedagogical-experience}{%
+\section{Pedagogical Experience}\label{pedagogical-experience}}
+
+\hypertarget{student-advising}{%
+\subsection{Student Advising}\label{student-advising}}
 
 \hypertarget{primary-instructor}{%
 \subsection{Primary Instructor}\label{primary-instructor}}
-
-\begin{cventries}
-    \cventry{Course design; weekly lectures; grading assignments and exams; office hours}{EDUC 391: Educational Psychology and Human Development}{09/2017 - 12/2017}{}{}\vspace{-4.0mm}
-\end{cventries}
 
 \hypertarget{graduate-student-instructor}{%
 \subsection{Graduate Student
 Instructor}\label{graduate-student-instructor}}
 
-\begin{cventries}
-    \cventry{Grading student essays; office hours; supervising student research projects}{PSYCH 457 : Research in Educational and Cross-Cultural Settings}{01/2020 - 05/2020}{}{}\vspace{-4.0mm}
-    \cventry{Grading student essays; office hours; supervising student research projects}{PSYCH 457 : Research in Educational and Cross-Cultural Settings}{01/2019 - 04/2019}{}{}\vspace{-4.0mm}
-    \cventry{Three review sessions per week; grading assignments and exams; office hours}{PSYCH 111: Introduction to Psychology}{01/2018 - 04/2018}{}{}\vspace{-4.0mm}
-    \cventry{Grading student essays; office hours; supervising student research projects}{PSYCH 457 : Research in Educational and Cross-Cultural Settings}{01/2017 - 04/2017}{}{}\vspace{-4.0mm}
-    \cventry{Three review sessions per week; grading assignments and exams; office hours}{PSYCH 240: Intro to Cognitive Psychology}{09/2016 - 12/2016}{}{}\vspace{-4.0mm}
-    \cventry{Grading student essays; office hours; supervising student research projects}{PSYCH 457 : Research in Educational and Cross-Cultural Settings}{01/2016 - 04/2016}{}{}\vspace{-4.0mm}
-\end{cventries}
+\hypertarget{professional-development}{%
+\section{Professional Development}\label{professional-development}}
 
-\hypertarget{program-assistant}{%
-\subsection{Program Assistant}\label{program-assistant}}
-
-\begin{cventries}
-    \cventry{Supervising joint research projects between US and Chinese students; organizing student activities}{Global Course Connection: Beijing Normal University}{05/2019}{}{}\vspace{-4.0mm}
-    \cventry{Supervising joint research projects between US and Chinese students; organizing student activities}{Global Course Connection: Beijing Normal University}{05/2017}{}{}\vspace{-4.0mm}
-    \cventry{Supervising joint research projects between US and Chinese students; organizing student activities}{Global Course Connection: Beijing Normal University}{05/2016}{}{}\vspace{-4.0mm}
-    \cventry{Supervising joint research projects between US and Chinese students; organizing student activities}{Global Course Connections: Beijing Normal University}{05/2015}{}{}\vspace{-4.0mm}
-\end{cventries}
-
-\hypertarget{professional-service}{%
-\section{Professional Service}\label{professional-service}}
+\hypertarget{university-and-professional-service}{%
+\section{University and Professional
+Service}\label{university-and-professional-service}}
 
 \hypertarget{ad-hoc-reviewer}{%
 \subsection{Ad Hoc Reviewer}\label{ad-hoc-reviewer}}
@@ -386,23 +384,12 @@ Instructor}\label{graduate-student-instructor}}
 \begin{itemize}
 \tightlist
 \item
-  Journal of Experimental Psychology: General
+  PLoS Genetics (1)
 \item
-  Memory \& Cognition
-\item
-  NeuroImage
-\item
-  Visual Cognition
+  Scientific Reports (1)
 \end{itemize}
 
-\hypertarget{references}{%
-\section{References}\label{references}}
-
-\begin{cventries}
-    \cventry{Edward E. Smith Professor of Psychology and Neuroscience; Co-Director, functional MRI Center, University of Michigan; Senior Editor, Psychological Science}{John Jonides, Ph.D.}{jjonides@umich.edu; 734-764-0192}{}{}\vspace{-4.0mm}
-    \cventry{Professor of Psychology and Education,  University of Michigan}{Kevin F. Miller, Ph.D.}{kevinmil@umich.edu; 734-615-1800}{}{}\vspace{-4.0mm}
-    \cventry{Professor of Cognition \& Cognitive Neuroscience and Educational Psychology, University of Michigan}{Priti Shah, Ph.D.}{priti@umich.edu; 734-615-3745}{}{}\vspace{-4.0mm}
-    \cventry{Professor of Psychology, University of Michigan}{Kai S. Cortina, Ph.D.}{schnabel@umich.edu; 734-615-3809}{}{}\vspace{-4.0mm}
-\end{cventries}
+\hypertarget{professional-memberships}{%
+\section{Professional Memberships}\label{professional-memberships}}
 
 \end{document}
