--- a/cv.Rmd
+++ b/cv.Rmd
@@ -1,14 +1,13 @@
 ---
-name: Han
-surname: Zhang
-position: "Postdoctoral Research Fellow"
-address: "Department of Psychology, University of Michigan"
-www: sites.lsa.umich.edu/hanzh
-email: "hanzh@umich.edu"
-#orcid: 0000-0001-6087-0428
-researchgate: Han_Zhang175
-github: HanZhang-psych
-twitter: \_HanZhang_
+name: Julie D.
+surname: White
+position: "IRTA Postdoctoral Research Fellow"
+address: "National Institute of Environmental Health Sciences"
+email: "julie.white@nih.gov"
+aboutme: "Trying to make things work"
+orcid: 0000-0002-2235-4817
+github: juliedwhite
+linkedin: julie-white-05888b133
 headcolor: 414141 # use black color
 date: "`r format(Sys.time(), '%B %Y')`"
 output: 
@@ -16,9 +15,9 @@ output:
     pandoc_args: ["--lua-filter=multiple-bibliographies.lua"] # used for creating bibliographies for multiple sections
     keep_tex: yes
 csl: apa-cv.csl # change this if you want to use other citation styles
-bibliography_published: "Published.bib" # use separate .bib files and assign each of them a unique key: bibliography_*
-bibliography_books: "Book_chapters.bib"
+bibliography_published: "Published_Reviewed.bib" # use separate .bib files and assign each of them a unique key: bibliography_*
 bibliography_inprogress: "In_progress.bib"
+bibliography_nonreviewed: "Published_NonReviewed.bib" 
 bibliography_presentations: "Presentations.bib"
 nocite: '@*' # don't change this if you want to print out all the refs
 
@@ -27,85 +26,56 @@ nocite: '@*' # don't change this if you want to print out all the refs
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
-library(vitae);library(tibble)
+library(vitae);library(tibble); library(glue)
 ```
 
 # Research Interests
 
-Attention; distraction; mind-wandering; eye movements
+* Genetic and environmental contributors to human phenotypic variation and health
+* Epigenetic modifications in response to environmental exposures
+* Gene x environment interactions
+* Bioinformatics, statistical genetics, and data visualization 
 
 # Education
 
 ```{r}
-tribble(
-  ~ Degree,
-  ~ Advisor,
-  ~ Year,
-  ~ Institution,
-  ~ Where,
-  "Postdoctoral Research Fellow, Department of Psychology",
-  "Advisor: Dr. John Jonides",
-  "05/2020-present",
-  "University of Michigan",
-  "Ann Arbor, MI, USA",
-  "Doctor of Philosophy, Combined Program in Education and Psychology",
-  "Dissertation: Mind-wandering: What Can We Learn from Eye Movements?",
-  "09/2018-05/2020",
-  "University of Michigan",
-  "Ann Arbor, MI, USA",
-  "Doctor of Philosophy, Combined Program in Education and Psychology",
-  "Proquest Distinguished Dissertation Nomination",
-  "09/2018-05/2020",
-  "University of Michigan",
-  "Ann Arbor, MI, USA",
-  "Master of Science, Combined Program in Education and Psychology",
-  NA,
-  "09/2014-05/2018",
-  "University of Michigan",
-  "Ann Arbor, MI, USA",
-  "Bachelor of Science, Psychology",
-  NA,
-  "09/2010-06/2014",
-  "Beijing Normal University",
-  "Beijing, China",
-) %>%
-  detailed_entries(
-    what = Degree,
-    when = Year,
-    with = Institution,
-    where = Where,
-    why = Advisor
-  )
+tribble(~ Degree, ~ Start, ~ End, ~ Institution, 
+        "B.S. in Genetics", "2010", "2014", "Clemson University", 
+        "M.A. in Anthropology", "2014", "2016", "Penn State University", 
+        "Ph.D. in Anthropology", "2016", "2019", "Penn State University", ) %>%
+  detailed_entries(with = Degree, where = glue("{Start}-{End}"), what = Institution)
 ```
 
-# Awards and Grants
-
+# History
 ```{r}
-tribble(
-  ~Year, ~Name, ~Institution,
-  2019, "Rackham One-Term Dissertation Fellowship ($17417)", "University of Michigan",
-  2019, "Rackham Graduate Student Research Grant ($3000)", "University of Michigan",
-  2019, "Rackham Conference Travel Grant ($1050)","University of Michigan",
-  2018, "Rackham Summer Training Award ($3700)","University of Michigan",
-  2018, "Rackham Conference Travel Grant ($800)","University of Michigan",
-  2017, "Rackham Conference Travel Grant ($800)","University of Michigan",
-  2017, "Professor & Mrs. Cho-Yee To Travel Grant ($500)","University of Michigan",
-  2015, "Professor & Mrs. Cho-Yee To Travel Grant ($500)","University of Michigan",
-  2014, "China National Scholarship ($1500)","Ministry of Education of the People's Republic of China",
-  2014, "The First Rank Academic Scholarship ($300)","Beijing Normal University",
-  2013, "The First Rank Academic Scholarship ($300)","Beijing Normal University",
-  2013, "Beijing Student Research and Entrepreneurial Action Plan ($1500)","Beijing Municipal Commission of Education",
-  2012, "Undergraduate Student Research Grant ($280)","Beijing Normal University",
-) %>% 
-  detailed_entries(
-    where = Year,
-    with = Name, 
-    what = Institution
-  ) 
+tribble(~ Title, ~ When, ~ Institution, 
+        "IRTA Postdoctoral Fellow", "2020-current", 
+        "Epidemiology Branch; National Institute of Environmental Health Sciences", 
+        "Instructor", "2019", "Penn State University", 
+        "Graduate Research Assistant", "2014-2019", "Penn State University", 
+        "Teaching Assistant", "2014-2018", "Penn State University", 
+        "NSF REU Biochemistry Intern", "2013", "Texas A&M University", 
+        "Summer Research Intern", "2012", "Greenwood Genetics Center", 
+        "Undergraduate Researcher in Genetics and Biochemistry", "2010-2014", "Clemson University") %>%
+  detailed_entries(with = Title, where = When, what = Institution)
 ```
 
-# Peer-reviewd Publications
+# Computational Languages
 
+# Publications
+
+## In-progress
+
+\begingroup
+\setlength{\parindent}{-0.5in}
+\setlength{\leftskip}{0.5in}
+
+::: {#refs_inprogress}
+:::
+
+\endgroup
+
+## Peer-reviewed
 <!-- Notes: copy and paste the following block for any other bibliography sections with the same bibliography key matched that you assigned in YAML  -->
 \begingroup
 \setlength{\parindent}{-0.5in}
@@ -117,149 +87,66 @@ tribble(
 \endgroup
 <!-- Bib-printing block ends here. -->
 
-
-
-# Work in Progress 
+## Non peer-reviewed
 
 \begingroup
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.5in}
 
-::: {#refs_inprogress}
+::: {#refs_nonreviewed}
 :::
 
 \endgroup
 
+# Grants and Awards
 
-# Book Chapters
+```{r}
+tribble(~Year, ~Name,
+        "2019", "National Science Foundation DDRIG (#31,535; awarded but declined)",
+        "2017-2018", "PSU Hill Fellowship Award ($1500 and $1200)",
+        "2017", "UW Summer Institutes in Statistical Genetics Travel Award ($1800)",
+        "2016-2018", "PSU RGSO Conference Travel Award ($400 each year)",
+        "2015", "PSU Center for Human Evolution and Diversity Research Grant ($7303") %>% 
+  detailed_entries(where = Year, what = Name) 
+```
+
+# Invited Presentations
 
 \begingroup
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.5in}
 
-::: {#refs_books}
+::: {}
 :::
 
 \endgroup
 
-
-# Selected Presentations
+# Conference Participation
 
 \begingroup
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.5in}
 
-::: {#refs_presentations}
+::: {}
 :::
 
 \endgroup
 
+# Pedagogical Experience
 
-# Teaching Experience
+## Student Advising
 
 ## Primary Instructor
 
-```{r}
-tribble(
-  ~ Year,
-  ~ Name,
-  ~ Duty,
-  '09/2017 - 12/2017',
-  "EDUC 391: Educational Psychology and Human Development",
-  "Course design; weekly lectures; grading assignments and exams; office hours"
-) %>%
-  detailed_entries(where = Year,
-                   with = Name,
-                   what = Duty) 
-```
-
-
 ## Graduate Student Instructor
 
-```{r}
-tribble(
-  ~ Year,
-  ~ Name,
-  ~ Duty,
-  '01/2020 - 05/2020',
-  "PSYCH 457 : Research in Educational and Cross-Cultural Settings",
-  "Grading student essays; office hours; supervising student research projects",
-  '01/2019 - 04/2019',
-  "PSYCH 457 : Research in Educational and Cross-Cultural Settings",
-  "Grading student essays; office hours; supervising student research projects",
-  '01/2018 - 04/2018',
-  "PSYCH 111: Introduction to Psychology",
-  "Three review sessions per week; grading assignments and exams; office hours",
-  '01/2017 - 04/2017',
-  "PSYCH 457 : Research in Educational and Cross-Cultural Settings",
-  "Grading student essays; office hours; supervising student research projects",
-  '09/2016 - 12/2016',
-  "PSYCH 240: Intro to Cognitive Psychology",
-  "Three review sessions per week; grading assignments and exams; office hours",
-  '01/2016 - 04/2016',
-  "PSYCH 457 : Research in Educational and Cross-Cultural Settings",
-  "Grading student essays; office hours; supervising student research projects"
-) %>%
-  detailed_entries(where = Year,
-                   with = Name,
-                   what = Duty) 
-```
+# Professional Development
 
-## Program Assistant
-
-```{r}
-tribble(
-  ~ Year,
-  ~ Name,
-  ~ Duty,
-  '05/2019',
-  "Global Course Connection: Beijing Normal University",
-  "Supervising joint research projects between US and Chinese students; organizing student activities",
-  '05/2017',
-  'Global Course Connection: Beijing Normal University',
-  "Supervising joint research projects between US and Chinese students; organizing student activities",
-  '05/2016',
-  "Global Course Connection: Beijing Normal University",
-  "Supervising joint research projects between US and Chinese students; organizing student activities",
-  '05/2015',
-  "Global Course Connections: Beijing Normal University",
-  "Supervising joint research projects between US and Chinese students; organizing student activities"
-) %>%
-  detailed_entries(where = Year,
-                   with = Name,
-                   what = Duty) 
-```
-
-# Professional Service
+# University and Professional Service
 
 ## Ad Hoc Reviewer
 
-* Journal of Experimental Psychology: General
-* Memory & Cognition
-* NeuroImage
-* Visual Cognition
+* PLoS Genetics (1)
+* Scientific Reports (1)
 
-# References
-
-```{r}
-tribble(
-  ~ Name,
-  ~ Title,
-  ~ Contact,
-  'John Jonides, Ph.D.',
-  "Edward E. Smith Professor of Psychology and Neuroscience; Co-Director, functional MRI Center, University of Michigan; Senior Editor, Psychological Science",
-  "jjonides@umich.edu; 734-764-0192",
-  'Kevin F. Miller, Ph.D.',
-  "Professor of Psychology and Education,  University of Michigan",
-  "kevinmil@umich.edu; 734-615-1800",
-  'Priti Shah, Ph.D.',
-  "Professor of Cognition & Cognitive Neuroscience and Educational Psychology, University of Michigan",
-  "priti@umich.edu; 734-615-3745",
-  'Kai S. Cortina, Ph.D.',
-  "Professor of Psychology, University of Michigan",
-  "schnabel@umich.edu; 734-615-3809"
-) %>%
-  detailed_entries(where = Contact,
-                   with = Name,
-                   what = Title) 
-```
+# Professional Memberships
