Remove orcid and change colors

--- a/CV.tex
+++ b/CV.tex
@@ -32,7 +32,7 @@
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 
-\definecolor{awesome}{HTML}{414141}
+\definecolor{awesome}{HTML}{016C59}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
@@ -61,9 +61,8 @@
 \address{National Institute of Environmental Health Sciences}
 
 \email{\href{mailto:julie.white@nih.gov}{\nolinkurl{julie.white@nih.gov}}}
-\orcid{0000-0002-2235-4817}
 \github{juliedwhite}
-\linkedin{julie-white-05888b133}
+\linkedin{julie-d-white}
 
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
@@ -333,7 +332,7 @@ Article{]}. \emph{PLOS Genetics}, \emph{15}(4), e1008030.
 \section{Grants and Awards}\label{grants-and-awards}}
 
 \begin{cventries}
-    \cventry{National Science Foundation DDRIG (\#31,535; awarded but declined)}{}{2019}{}{}\vspace{-4.0mm}
+    \cventry{National Science Foundation DDRIG (\$31,535; awarded but declined)}{}{2019}{}{}\vspace{-4.0mm}
     \cventry{PSU Hill Fellowship Award (\$1500 and \$1200)}{}{2017-2018}{}{}\vspace{-4.0mm}
     \cventry{UW Summer Institutes in Statistical Genetics Travel Award (\$1800)}{}{2017}{}{}\vspace{-4.0mm}
     \cventry{PSU RGSO Conference Travel Award (\$400 each year)}{}{2016-2018}{}{}\vspace{-4.0mm}
