--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -148,6 +148,8 @@
 \definecolor{awesome-nephritis}{HTML}{27AE60}
 \definecolor{awesome-concrete}{HTML}{95A5A6}
 \definecolor{awesome-darknight}{HTML}{131A28}
+% My color
+\definecolor{green-blue}{HTML}{016C59}
 \colorlet{awesome}{awesome-red}
 
 % Boolean value to switch section color highlighting
@@ -155,8 +157,8 @@
 \setbool{acvSectionColorHighlight}{true}
 
 % Awesome section color
-\def\@sectioncolor#1#2#3{%
-  \ifbool{acvSectionColorHighlight}{{\color{awesome}#1#2#3}}{#1#2#3}%
+\def\@sectioncolor#1{%
+  \ifbool{acvSectionColorHighlight}{{\color{awesome}#1}}{#1}%
 }
 
 
