Change color, fonts, and header position
Want to figure out how to make two columns of information underneath the name

--- a/CV.tex
+++ b/CV.tex
@@ -32,7 +32,7 @@
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 
-\definecolor{awesome}{HTML}{016C59}
+\definecolor{awesome}{HTML}{02818A}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
