Add skills. Not formatted how I'd like, but it's a start

--- a/CV.tex
+++ b/CV.tex
@@ -165,6 +165,19 @@
 \hypertarget{computational-languages}{%
 \section{Computational Languages}\label{computational-languages}}
 
+\begin{cventries}
+    \cventry{}{R}{}{Advanced}{}\vspace{-4.0mm}
+    \cventry{}{Bash}{}{Intermediate}{}\vspace{-4.0mm}
+    \cventry{}{Python}{}{Intermediate}{}\vspace{-4.0mm}
+    \cventry{}{Bioconductor}{}{Novice}{}\vspace{-4.0mm}
+    \cventry{}{MATLAB}{}{Novice}{}\vspace{-4.0mm}
+    \cventry{}{LaTeX}{}{Intermediate}{}\vspace{-4.0mm}
+    \cventry{}{plink}{}{Advanced}{}\vspace{-4.0mm}
+    \cventry{}{vcf- and bcftools}{}{Advanced}{}\vspace{-4.0mm}
+    \cventry{}{shapeit}{}{Advanced}{}\vspace{-4.0mm}
+    \cventry{}{Impute}{}{Advanced}{}\vspace{-4.0mm}
+\end{cventries}
+
 \hypertarget{publications}{%
 \section{Publications}\label{publications}}
 
