Shift Hanne's paper from in review to published

--- a/CV.tex
+++ b/CV.tex
@@ -197,13 +197,6 @@ Koppelman, G. H., \& London, S. J. (in review-). \emph{Epigenome-wide
 dna methylation and pesticide use in the agricultural lung health
 study}.
 
-\leavevmode\hypertarget{ref-Hoskens_BiometricMatching}{}%
-Hoskens, H., Liu, D., Naqvi, S., Lee, M. K., Indencleef, K.,
-\textbf{White, Julie D.}, Li, J., Hens, G., Wysocka, J., Walsh, S.,
-Richmond, S., Shriver, M. D., Shaffer, J. R., Peeters, H., Weinberg, S.
-M., \& Claes, P. (in review-). \emph{3D facial phenotyping by biometric
-sibling matching used in contemporary genomic methodologies}.
-
 \endgroup
 
 \hypertarget{peer-reviewed}{%
@@ -214,6 +207,15 @@ sibling matching used in contemporary genomic methodologies}.
 \setlength{\leftskip}{0.5in}
 
 \hypertarget{refs_published}{}
+\leavevmode\hypertarget{ref-Hoskens_2021_BiometricMatching}{}%
+Hoskens, H., Liu, D., Naqvi, S., Lee, M. K., Eller, R. J., Indencleef,
+K., \textbf{White, Julie D.}, Li, J., Larmuseau, M. H. D., Hens, G.,
+Wysocka, J., Walsh, S., Richmond, S., Shriver, M. D., Shaffer, J. R.,
+Peeters, H., Weinberg, S. M., \& Claes, P. (2021). 3D facial phenotyping
+by biometric sibling matching used in contemporary genomic methodologies
+{[}Journal Article{]}. \emph{PLOS Genetics}, \emph{17}(5), 1--28.
+\url{https://doi.org/10.1371/journal.pgen.1009528}
+
 \leavevmode\hypertarget{ref-Indencleef_2021_NSCLP}{}%
 Indencleef, K., Hoskens, H., Lee, M. K., \textbf{White, Julie D.}, Liu,
 C., Eller, R. J., Naqvi, S., Wehby, G. L., Moreno Uribe, L. M., Hecht,
