--- a/Published_Reviewed.bib
+++ b/Published_Reviewed.bib
@@ -1,4 +1,17 @@
-﻿@article{Indencleef_2021_NSCLP,
+﻿@article{Hoskens_2021_BiometricMatching,
+  author = {Hoskens, Hanne and Liu, Dongjing and Naqvi, Sahin and Lee, Myoung Keun and Eller, Ryan J. and Indencleef, Karlijne and {\bf White, Julie D.} and Li, Jiarui and Larmuseau, Maarten H.D. and Hens, Greet and Wysocka, Joanna and Walsh, Susan and Richmond, Stephen and Shriver, Mark D. and Shaffer, John R. and Peeters, Hilde and Weinberg, Seth M. and Claes, Peter},
+  title = {3D facial phenotyping by biometric sibling matching used in contemporary genomic methodologies},
+  journal = {PLOS Genetics},
+  volume = {17},
+  number = {5},
+  pages = {1-28},
+  DOI = {10.1371/journal.pgen.1009528},
+  url = {https://doi.org/10.1371/journal.pgen.1009528},
+  year = {2021},
+  type = {Journal Article}
+}
+
+@article{Indencleef_2021_NSCLP,
    author = {Indencleef, Karlijne and Hoskens, Hanne and Lee, Myoung Keun and {\bf White, Julie D.} and Liu, Chenxing and Eller, Ryan J. and Naqvi, Sahin and Wehby, George L. and Moreno Uribe, Lina M. and Hecht, Jacqueline T. and Long, Ross E. and Christensen, Kaare and Deleyiannis, Frederic W. and Walsh, Susan and Shriver, Mark D. and Richmond, Stephen and Wysocka, Joanna and Peeters, Hilde and Shaffer, John R. and Marazita, Mary L. and Hens, Greet and Weinberg, Seth M. and Claes, Peter},
    title = {The Intersection of the Genetic Architectures of Orofacial Clefts and Normal Facial Variation},
    journal = {Frontiers in Genetics},
