Add invited presentations section

--- a/CV.tex
+++ b/CV.tex
@@ -347,21 +347,21 @@ Article{]}. \emph{PLOS Genetics}, \emph{15}(4), e1008030.
 \section{Grants and Awards}\label{grants-and-awards}}
 
 \begin{cventries}
-    \cventry{National Science Foundation DDRIG (\$31,535; awarded but declined)}{}{2019}{}{}\vspace{-4.0mm}
-    \cventry{PSU Hill Fellowship Award (\$1500 and \$1200)}{}{2017-2018}{}{}\vspace{-4.0mm}
-    \cventry{UW Summer Institutes in Statistical Genetics Travel Award (\$1800)}{}{2017}{}{}\vspace{-4.0mm}
-    \cventry{PSU RGSO Conference Travel Award (\$400 each year)}{}{2016-2018}{}{}\vspace{-4.0mm}
-    \cventry{PSU Center for Human Evolution and Diversity Research Grant (\$7303}{}{2015}{}{}\vspace{-4.0mm}
+    \cventry{National Science Foundation DDRIG (\$31,535; awarded but declined)}{}{}{2019}{}\vspace{-4.0mm}
+    \cventry{PSU Hill Fellowship Award (\$1500 and \$1200)}{}{}{2017-2018}{}\vspace{-4.0mm}
+    \cventry{UW Summer Institutes in Statistical Genetics Travel Award (\$1800)}{}{}{2017}{}\vspace{-4.0mm}
+    \cventry{PSU RGSO Conference Travel Award (\$400 each year)}{}{}{2016-2018}{}\vspace{-4.0mm}
+    \cventry{PSU Center for Human Evolution and Diversity Research Grant (\$7303}{}{}{2015}{}\vspace{-4.0mm}
 \end{cventries}
 
 \hypertarget{invited-presentations}{%
 \section{Invited Presentations}\label{invited-presentations}}
 
-\begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
-
-\endgroup
+\begin{cventries}
+    \cventry{203 GWAS signals reveal combinatorial effects on the genetic architecture of facial shape}{Center for Craniofacial and Dental Genetics; Advances in Human Facial Genetics Meeting}{Pittsburgh, PA, USA}{2019}{}\vspace{-4.0mm}
+    \cventry{Detecting asymmetry in 3D facial scans}{KU Leuven; Medical Imaging Center}{Leuven, Belgium}{2018}{}\vspace{-4.0mm}
+    \cventry{Exploring genotype to phenotype connections}{University of Pretoria; Genetics department}{Pretoria, South Africa}{2016}{}\vspace{-4.0mm}
+\end{cventries}
 
 \hypertarget{conference-participation}{%
 \section{Conference Participation}\label{conference-participation}}
